--- a/cv/src/App.scss
+++ b/cv/src/App.scss
@@ -5,26 +5,29 @@ body {
     background: radial-gradient(
             circle at 30% 30%,
             rgba(89, 80, 221, 0.3),
-            transparent 60%
+            transparent 50%
         ),
         radial-gradient(
             circle at 70% 40%,
             rgba(0, 255, 255, 0.3),
-            transparent 60%
+            transparent 50%
         ),
         radial-gradient(
             circle at 50% 80%,
             rgba(16, 96, 136, 0.3),
-            transparent 60%
+            transparent 50%
         ),
         radial-gradient(
             circle at 0% 120%,
             rgba(189, 154, 246, 0.3),
-            transparent 60%
+            transparent 50%
         ),
         $background;
     background-blend-mode: screen;
     min-height: 100vh;
     overflow-x: hidden;
     color: $text-1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
