--- a/cv/src/components/Home/Home.module.scss
+++ b/cv/src/components/Home/Home.module.scss
@@ -4,23 +4,34 @@
     // margin-top: 10rem;
     height: 95vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .profile {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .photo {
     width: 20rem;
     height: 20rem;
-    padding-right: 1rem;
+    margin-right: 1rem;
     border-radius: 10rem;
+    box-shadow: 2px 2px 10px black;
+    cursor: pointer;
+    transition: 0.2s box-shadow ease-out; //todo: more photos
+}
+
+.photo:hover {
+    box-shadow: 2px 2px 50px black;
 }
 
 .introduction {
     text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .name {
@@ -30,4 +41,34 @@
 .whoami {
     font-size: 2.6rem;
     color: $text-2;
+}
+
+.links {
+    padding-top: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.icon {
+    width: 3.75rem;
+    height: 3.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid $text-3;
+    border-radius: 2rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    transition: 0.1s box-shadow ease-in;
+}
+
+.icon:hover {
+    box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.8);
+}
+
+.icon svg {
+    width: 1.5rem;
+    height: 1.5rem;
 }
