--- a/cv/src/components/Navbar/LanguageSelector/LanguageSelector.module.scss
+++ b/cv/src/components/Navbar/LanguageSelector/LanguageSelector.module.scss
@@ -4,4 +4,12 @@
     background: none;
     border: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+img {
+    text-shadow: 2px 2px 12px black;
 }
