--- a/cv/src/components/Home/Home.module.scss
+++ b/cv/src/components/Home/Home.module.scss
@@ -18,7 +18,6 @@
 .photo {
     width: 20rem;
     height: 20rem;
-    margin-right: 1rem;
     border-radius: 10rem;
     box-shadow: 2px 2px 10px black;
     cursor: pointer;
@@ -30,16 +29,23 @@
 }
 
 .introduction {
+    padding-left: 2rem;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .name {
     font-size: 7rem;
+    line-height: 1.2;
 }
 
 .whoami {
     font-size: 2.6rem;
+    color: $text-2;
+}
+
+.whoami2 {
+    font-size: 2rem;
     color: $text-2;
 }
 
@@ -48,6 +54,11 @@
     display: flex;
     justify-content: center;
     gap: 1rem;
+}
+
+.links a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .icon {
@@ -71,4 +82,49 @@
 .icon svg {
     width: 1.5rem;
     height: 1.5rem;
+}
+
+@media only screen and (max-width: 80rem) {
+    .photo {
+        width: 15rem;
+        height: 15rem;
+    }
+
+    .name {
+        font-size: 5rem;
+    }
+
+    .whoami {
+        font-size: 2rem;
+    }
+
+    .whoami2 {
+        font-size: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 60rem) {
+    .profile {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .introduction {
+        padding-left: 0;
+    }
+}
+
+@media only screen and (max-width: 48rem) {
+    .name {
+        font-size: 2.7rem;
+    }
+
+    .whoami {
+        font-size: 1.5rem;
+    }
+
+    .whoami2 {
+        font-size: 1.2rem;
+    }
 }
