--- a/cv/src/components/Navbar/Navbar.module.scss
+++ b/cv/src/components/Navbar/Navbar.module.scss
@@ -8,7 +8,7 @@
     top: 2rem;
     left: 50%;
     transform: translateX(-50%);
-    width: 35%; // todo: bigger on smaller devices
+    width: 35%;
     padding: 0;
     z-index: 10;
     border-radius: 20rem;
@@ -28,7 +28,7 @@
 }
 
 .navElements .links {
-    width: 70%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -50,4 +50,42 @@
 .links a:hover {
     color: $text-1;
     text-shadow: 2px 2px 12px black;
+}
+
+@media only screen and (max-width: 80rem) {
+    .navbar {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 60rem) {
+    .navbar {
+        width: 70%;
+    }
+
+    .navElements {
+        padding: 1.5rem 2.5rem;
+    }
+
+    .navElements .links {
+        width: 80%;
+    }
+
+    .navElements a {
+        font-size: 1.6rem;
+    }
+}
+
+@media only screen and (max-width: 48rem) {
+    .navbar {
+        width: 95%;
+    }
+
+    .navElements {
+        padding: 1.5rem 2rem;
+    }
+
+    .navElements a {
+        font-size: 1rem;
+    }
 }
