--- a/cv/src/components/TechStack/TechStack.module.scss
+++ b/cv/src/components/TechStack/TechStack.module.scss
@@ -1,11 +1,18 @@
 @use "../../vars" as *;
 
+.stack {
+    display: flex;
+    flex-direction: column;
+    width: 90vw;
+}
+
 .stackTitle {
     padding-bottom: 1rem;
 }
 
 .filters {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem;
     margin-bottom: 1rem;
 
@@ -31,10 +38,10 @@
     transition: background-color 0.2s;
 }
 
-.stack {
+.technologies {
     display: flex;
-    // max-width: 80%;
     flex-wrap: wrap;
+    gap: 0.5rem 0.4rem;
 }
 
 @media only screen and (max-width: 80rem) {
