Add categories sorting and translations

--- a/cv/src/components/TechStack/Technology/Technology.module.scss
+++ b/cv/src/components/TechStack/Technology/Technology.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     padding: 0.5rem 1rem;
     background-color: rgba(0, 0, 0, 0.4);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 29em;
     width: fit-content;
 
