--- a/cv/src/components/TechStack/TechStack.module.scss
+++ b/cv/src/components/TechStack/TechStack.module.scss
@@ -42,6 +42,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem 0.4rem;
+    margin-bottom: 2rem;
 }
 
 @media only screen and (max-width: 80rem) {
