--- a/cv/src/components/Home/Home.module.scss
+++ b/cv/src/components/Home/Home.module.scss
@@ -18,14 +18,15 @@
 .photo {
     width: 20rem;
     height: 20rem;
+    object-fit: cover;
     border-radius: 10rem;
     box-shadow: 2px 2px 10px black;
     cursor: pointer;
-    transition: 0.2s box-shadow ease-out; //todo: more photos
+    transition: 0.2s box-shadow ease-out;
 }
 
 .photo:hover {
-    box-shadow: 2px 2px 50px black;
+    box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.8);
 }
 
 .introduction {
