--- a/cv/src/components/Projects/ProjectItem/ProjectItem.module.scss
+++ b/cv/src/components/Projects/ProjectItem/ProjectItem.module.scss
@@ -15,6 +15,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: justify;
+    padding-right: 1rem;
+    padding-left: 0.5rem;
 }
 
 .name {
