Add new data, update metatags

--- a/cv/src/components/About/About.module.scss
+++ b/cv/src/components/About/About.module.scss
@@ -1,10 +1,6 @@
 @use "../../vars" as *;
 
 .about {
-    // padding: 2rem;
-    // background-color: #f4f4f4;
-    // border-radius: 8px;
-    // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     padding-bottom: 2rem;
 }
 
@@ -13,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .emailContact {
@@ -23,7 +20,7 @@
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     padding: 0.7rem 1rem;
     border-radius: 6rem;
-    transition: background 0.3s ease;
+    transition: 0.3s ease;
 
     &:hover {
         background: rgba(0, 0, 0, 0.6);
